--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@babel/core": "^7.26.0",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "cloudinary": "^2.8.0",
     "expo": "~54.0.23",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.10",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-navigation-bar": "~5.0.9",
     "expo-router": "~6.0.14",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.8",
     "jwt-decode": "^4.0.0",
+    "multer": "^2.0.2",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
